# BlackHoleSimulator

./: .gitignore  CMakeLists.txt  README.md
includes/: class_display.hpp  class_opencl.hpp  class_opengl.hpp  objects.hpp
sources/: class_display.cpp  class_opencl.cpp  class_opengl.cpp  main.cpp
sources/kernels/: render_texture.cl
sources/shaders/: fragment.glsl  vertex.glsl
